<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/topo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#333333"
        android:textSize="32sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#ffffff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:id="@+id/dataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelN1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:labelFor="@id/inputN1"
                android:text="@string/txt_n1"
                android:textColor="#666666" />

            <EditText
                android:id="@+id/inputN1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:inputType="numberDecimal"
                android:labelFor="@id/labelN1" />

            <TextView
                android:id="@+id/labelN2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:labelFor="@id/inputN2"
                android:text="@string/txt_n2"
                android:textColor="#666666" />

            <EditText
                android:id="@+id/inputN2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:inputType="numberDecimal"
                android:labelFor="@id/labelN2" />

            <Button
                android:id="@+id/btnCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#26C485"
                android:fontFamily="@font/open_sans"
                android:text="@string/btn_calc"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#DF2935"
                android:fontFamily="@font/open_sans"
                android:text="@string/btn_clear"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FFFFFF"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/labelAVG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/txt_avrg"
                android:textAlignment="center"
                android:textColor="#666666" />

            <TextView
                android:id="@+id/valueAVG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/txt_avg_value"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/labelSituation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/txt_situation"
                android:textAlignment="center"
                android:textColor="#666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valueSituation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/txt_approved"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal">

                <Space
                    android:id="@+id/space"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imgSituation"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/txt_situation"
                    app:srcCompat="@drawable/aprovado" />

                <Space
                    android:id="@+id/sapce2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>